# Electre

./: .gitignore  ELECTRE.ipynb  ELECTRE.py  ElectreC.py  README.md  ideas.txt  phones.xlsx  pyproject.toml  sources.txt
