[tool.poetry]
name = "electre"
version = "0.1.0"
description = "Multi-criteria decision making"
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.10.0"
numpy = "^1.19.1"
pandas = "^1.1.1"
matplotlib = "^3.3.1"
scikit-learn = "^0.23.2"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
